Add partner validation and client toast UI
Add server-side validation for partners by decorating CreatePartnerDto and UpdatePartnerDto with DataAnnotations and enforcing ModelState checks in PartnersController (return BadRequest with validation errors and log warnings). Include numerous application log files for diagnostics. Update Program.cs and appsettings to improve startup/CORS logging and configuration. Frontend changes: add ToastContainer and ToastContext, update App.tsx, SupplierManagement, suppliers service and types, and update .env to support the new UI notifications and behavior.

--- a/BomilactERP.api/appsettings.json
+++ b/BomilactERP.api/appsettings.json
@@ -46,5 +46,15 @@
       "WithThreadId"
     ]
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CorsSettings": {
+    "AllowedOrigins": [
+      "http://localhost:3001",
+      "http://localhost:5174",
+      "http://localhost:3000",
+      "https://localhost:5173",
+      "https://localhost:5174",
+      "https://localhost:7102"
+    ]
+  }
 }
