--- a/BomilactERP.api/appsettings.Development.json
+++ b/BomilactERP.api/appsettings.Development.json
@@ -8,5 +8,16 @@
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.EntityFrameworkCore": "Information"
     }
+  },
+  "CorsSettings": {
+    "AllowedOrigins": [
+      "http://localhost:3001",
+      "http://localhost:5173",
+      "http://localhost:5174",
+      "http://localhost:3000",
+      "https://localhost:5173",
+      "https://localhost:5174",
+      "https://localhost:7102"
+    ]
   }
 }
