Add auth/permissions, production & UI updates
Introduce authentication, authorization and production management features. Adds ASP.NET Identity and JWT packages, JwtService and PermissionSeedService, new controllers (Auth, Permissions, Roles, ProductionBatches, ProductionLogs) and many DTOs/models plus EF migrations to support identity and role/permission management. Enhances existing controllers for Recipes, ProductionPlans and Users with richer DTOs and business logic (status calculations, alerts, step handling). Also updates frontend: auth context, permission hook, Login, PermissionMatrix, Role/User management components, services and axios client to integrate with the new API endpoints.

--- a/BomilactERP.api/appsettings.json
+++ b/BomilactERP.api/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS; Database=bomilact_erp; User Id=sa; Password=secret; Encrypt=false; MultipleActiveResultSets=True"
   },
+  "Jwt": {
+    "Key": "BomilactERP-SuperSecretKey-2026-ChangeThis-InProduction!",
+    "Issuer": "BomilactERP",
+    "Audience": "BomilactERP-Frontend",
+    "ExpireHours": "24"
+  },
   "Serilog": {
     "Using": [
       "Serilog.Sinks.Console",
